correct hero background z-index

--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -27,6 +27,7 @@
     @media #{$on-desktop} {
       top: 0;
       left: 50%;
+      z-index: -1;
 
       height: 694px;
 
